tests/parser/matlab_2021a_name_value_pairs/nv_pair_4.m
% Example taken from the 2021a release notes

myFunction(name=value,posArgument);

% name=value arguments must appear after all positional arguments, so
% this errors
